<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margen_pantalla">

        <TextView
            android:id="@+id/tvTituloSalario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_salario"
            android:textSize="@dimen/texto_titulo"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etNombreEmpleado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_empleado"
            android:inputType="textPersonName"
            android:layout_marginTop="@dimen/margen_campo"
            app:layout_constraintTop_toBottomOf="@id/tvTituloSalario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/etSalarioBase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_salario_base"
            android:inputType="numberDecimal"
            android:layout_marginTop="@dimen/margen_campo"
            app:layout_constraintTop_toBottomOf="@id/etNombreEmpleado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCalcularSalario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular_salario"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/etSalarioBase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contenedorResultado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/fondo_resultado"
            android:padding="@dimen/padding_resultado"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/btnCalcularSalario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvSalarioBruto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/texto_normal"
                android:textColor="@color/verde_bruto"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvRenta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/texto_normal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvSalarioBruto"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvAfp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/texto_normal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvRenta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvIsss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/texto_normal"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvAfp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvSalarioNeto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/texto_normal"
                android:textColor="@color/rojo_neto"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvIsss"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>